# cmake_demo

./: CMakeCache.txt  CMakeLists.txt  README.md  lambda_map.cpp  main.cpp  output.csv  suffix_number.cpp  use_string_any.cpp
sub/: CMakeLists.txt  test.cpp  test.h
